# ataxia

./: .gitignore  .gitmodules  AUTHORS  COPYING  CREDITS  Cargo.toml  Doxyfile  Godeps  Gopkg.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTES  README  README.md  area.go  ataxia.1  ataxia_Prefix.pch  build.rs  build.sh  character.go  clean.bash  index.html  interpret.go  lua_accessors.go  main.go  make.bash  player.go  server.go  uuid.go  world.go
ataxia-core/: Cargo.toml
ataxia-core/src/: config.rs  lib.rs
ataxia-engine/: Cargo.toml  build.rs
ataxia-engine/src/: engine.rs  lib.rs
ataxia-portal/: Cargo.toml  build.rs
ataxia-portal/src/: lib.rs  portal.rs
ataxia-portal/src/portal/handlers/: mod.rs  telnet.rs  websockets.rs
ataxia-proxy/: Cargo.toml
ataxia-proxy/src/: lib.rs  proxy.rs
ataxia-proxy/src/proxy/handlers/: mod.rs  telnet.rs  websockets.rs
ataxia.xcodeproj/: project.pbxproj
cmd/ataxia/: main.go
cmd/ataxia-proxy/: main.go  package.go
cmd/proxy/: main.go
data/: ataxia.toml  config.ini  config.lua  config.toml  engine.toml  proxy.toml
data/world/: are_to_json.py  midgaard.are  midgaard.json
doc/: DESIGN  HACKING
docs/: enginedesign.md  gamedesign.md  randomideas.md
engine/: account.go  doc.go  lua_accessors.go  player.go  server.go  world.go
etc/: config.lua
examples/: SimpleCocoaServer.h  SimpleCocoaServer.m
game/: area.go  character.go  doc.go  interpret.go  lua_accessors.go  player.go  world.go
handler/: handler.go  telnet.go
include/: log.h  network.h  settings.h
internal/engine/: account.go  server.go
internal/handler/: doc.go  telnet.go
internal/utils/: doc.go
interpret/: interpret.go
lib/telnet/: .gitignore  Makefile  telnet.c  telnet.go  telnet.h
lib/telnet/libtelnet/: libtelnet.h
lua/: Makefile  doc.go  interpret.go  lua.go
scripts/commands/: ch_commands.json  character_action.lua  commands.json  look.lua  pl_commands.json  say.lua
scripts/commands/character/: exits.lua  look.lua  say.lua  test.lua  walk.lua
scripts/interface/: accessors.lua  character.lua  context.lua  room.lua
settings/: Makefile  settings.go
source/: log.m  main.m  settings.m
src/: Makefile  clean.bash  config.rs  engine.rs  lib.rs  log.m  main.go  main.m  main.rs  make.bash  network.m  player.go  proxy.rs  server.go  server.rs  settings.m
src/cmd/ataxia/: Makefile  main.go  player.go  server.go
src/config/: mod.rs
src/engine/: config.rs  lua.rs
src/errors/: config_error.rs  mod.rs
src/handler/: handler.go  telnet.go
src/lua/: lua.go
src/net/: Makefile  net.go
src/pkg/handler/: Makefile  handler.go  telnet.go
src/pkg/lua/: lua.go
src/proxy/handlers/: mod.rs  websockets.rs
src/server/: Makefile  server.go
src/settings/: settings.go
telnet/: telnet.c  telnet.go  telnet.h
tools/: generate-authors.sh  release-edit.sh  run-doc-server.sh
utils/: uuid.go
