[package]
name          = "ataxia"
version       = "0.0.1-dev"
license       = "MIT/Apache-2.0"
authors       = ["Justin Seabrook-Rocha <xenith@xenith.org>"]
description   = """
A modern MUD engine using Lua for scripting and game logic
"""
homepage      = "https://github.com/xenith-studios/ataxia"
repository    = "https://github.com/xenith-studios/ataxia"
readme        = "README.md"
build         = "build.rs"

[dependencies]
rand = "^0.5"
toml = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
log = "0.4.1"
simplelog = "0.5.1"
failure = "~0.1.1"
#slog = "^2.1"
#slog-term = "^2.3"

[dependencies.clap]
version = "~2"
default-features = false
features = [ "color", "wrap_help" ]

[build-dependencies]
time = "^0.1.39"
