[package]
name          = "ataxia-core"
version       = "0.0.1-dev"
license       = "MIT/Apache-2.0"
authors       = ["Justin Seabrook-Rocha <xenith@xenith.org>"]
description   = """
A modern MUD engine using Lua for scripting and game logic
"""
homepage      = "https://github.com/xenith-studios/ataxia"
repository    = "https://github.com/xenith-studios/ataxia"
readme        = "README.md"
build         = "build.rs"
edition       = "2018"

[dependencies]
toml = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "0.3"
anyhow = "^1.0"

[build-dependencies]
time = "0.3"
