[package]
name                  = "ataxia-core"
build                 = "build.rs"
version.workspace     = true
license.workspace     = true
authors.workspace     = true
description.workspace = true
homepage.workspace    = true
repository.workspace  = true
readme.workspace      = true
edition.workspace     = true

[dependencies]
toml = "^0.7"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
time = "0.3"
