[package]
name          = "ataxia-engine"
version       = "0.0.1-dev"
license       = "MIT/Apache-2.0"
authors       = ["Justin Seabrook-Rocha <xenith@xenith.org>"]
description   = """
A modern MUD engine using Lua for scripting and game logic
"""
homepage      = "https://github.com/xenith-studios/ataxia"
repository    = "https://github.com/xenith-studios/ataxia"
readme        = "README.md"
build         = "build.rs"
edition       = "2021"

[dependencies]
ataxia-core = { path = "../ataxia-core" }
log = "^0.4"
simplelog = "^0.10"
anyhow = "^1.0"
#rand = "^0.7"

[build-dependencies]
time = "0.3"
