[package]
name                  = "ataxia-engine"
build                 = "build.rs"
version.workspace     = true
license.workspace     = true
authors.workspace     = true
description.workspace = true
homepage.workspace    = true
repository.workspace  = true
readme.workspace      = true
edition.workspace     = true

[dependencies]
ataxia-core = { path = "../ataxia-core" }
log = "^0.4"
simplelog = "^0.12"
anyhow = "^1.0"
#rand = "^0.7"

[build-dependencies]
time = "0.3"
