[package]
name                  = "ataxia-portal"
build                 = "build.rs"
version.workspace     = true
license.workspace     = true
authors.workspace     = true
description.workspace = true
homepage.workspace    = true
repository.workspace  = true
readme.workspace      = true
edition.workspace     = true

[dependencies]
ataxia-core = { path = "../ataxia-core" }
log = "^0.4"
simplelog = "^0.12"
anyhow = "^1.0"
uuid = { version = "^1.1", features = ["v4"] }
futures = "^0.3"
tokio = { version = "^1", features = ["net", "rt",  "rt-multi-thread", "io-util", "sync"] }
tokio-util = { version = "^0.7", features = ["codec"] }
#rand = "^0.7"

[build-dependencies]
time = "0.3"
