[package]
name          = "ataxia-proxy"
version       = "0.0.1-dev"
license       = "MIT/Apache-2.0"
authors       = ["Justin Seabrook-Rocha <xenith@xenith.org>"]
description   = """
A modern MUD engine using Lua for scripting and game logic
"""
homepage      = "https://github.com/xenith-studios/ataxia"
repository    = "https://github.com/xenith-studios/ataxia"
readme        = "README.md"
build         = "build.rs"
edition       = "2018"

[dependencies]
ataxia-core = { path = "../ataxia-core" }
rand = "^0.7"
log = "^0.4"
simplelog = "^0.7"
failure = "^0.1"
ws = "^0.9"
uuid = { version = "^0.7.2", features = ["v4"] }
futures-preview = "=0.3.0-alpha.19"
tokio = "=0.2.0-alpha.6"

[dependencies.clap]
version = "~2"
default-features = false
features = [ "color", "wrap_help" ]

[build-dependencies]
time = "^0.1"
