[package]
name          = "ataxia-proxy"
version       = "0.0.1-dev"
license       = "MIT/Apache-2.0"
authors       = ["Justin Seabrook-Rocha <xenith@xenith.org>"]
description   = """
A modern MUD engine using Lua for scripting and game logic
"""
homepage      = "https://github.com/xenith-studios/ataxia"
repository    = "https://github.com/xenith-studios/ataxia"
readme        = "README.md"
build         = "build.rs"
edition       = "2018"

[dependencies]
ataxia-core = { path = "../ataxia-core" }
log = "^0.4"
simplelog = "^0.8"
anyhow = "^1.0"
uuid = { version = "^0.8", features = ["v4"] }
futures = "^0.3"
tokio = { version = "^0.2", features = ["tcp", "rt-core", "dns", "io-util", "stream"] }
crossbeam = "0.7"
#rand = "^0.7"

[build-dependencies]
time = "^0.2"
